# notion_processing

./: .gitignore  AUTHENTICATION_SETUP.md  DATABASE_DUMP.md  Makefile  README.md  docker-compose.yml  env.example  main.py  pyproject.toml  streamlit_app.py
notion_processing/: __init__.py  classifier.py  cli.py  database.py  extractor.py  models.py  pipeline.py  summarizer.py
tests/: test_basic.py
